# summer-2025-recruitment

./: .env.example  .gitignore  README.md  README_SETUP.md  architecture.d2  check_docs.py  demo-frontend.html  demo.py  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run_tests.py  test_api.py
app/: main.py
app/core/: api_error_handler.py  cache.py  config.py  rate_limiter.py  sanitizer.py  validation.py
app/models/: schemas.py
app/services/: ai_detection.py  contact_verification.py  document_analysis.py  document_processor.py  fraud_scorer.py
samples/: john_doe_resume.docx
static/: index.html  script.js  style.css
static/samples/: jeremiah_harvey_resume.docx  jeremiah_harvey_resume.txt  john_doe_resume.txt
tests/: test_api.py  test_cache.py  test_contact_verification.py  test_document_processor.py  test_file_validation.py  test_fraud_scorer.py  test_sanitization.py
